Update the slime client to look for appealing

--- a/apps/slime-client/index.html
+++ b/apps/slime-client/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Slime - The open source coupon extension</title>
   </head>
   <body class="h-[600px] w-[360px] text-base">
-    <div class="h-full w-full bg-dark text-light" id="root"></div>
+    <div class="w-full h-full bg-dark text-light" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
