--- a/apps/slime-client/src/entrypoints/popup/index.html
+++ b/apps/slime-client/src/entrypoints/popup/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Slime - The open source coupon extension</title>
+    <meta name="manifest.type" content="browser_action" />
   </head>
   <body class="h-[600px] w-[360px] text-base">
     <div class="w-full h-full bg-dark text-light" id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./main.tsx"></script>
   </body>
 </html>
