Update client designs

--- a/apps/slime-client/src/entrypoints/popup/index.html
+++ b/apps/slime-client/src/entrypoints/popup/index.html
@@ -7,8 +7,8 @@
     <title>Slime - The open source coupon extension</title>
     <meta name="manifest.type" content="browser_action" />
   </head>
-  <body class="h-[600px] w-[360px] text-base">
-    <div class="w-full h-full bg-dark text-light" id="root"></div>
+  <body class="h-[600px] w-[420px] text-base font-sans">
+    <div class="w-full h-full bg-neutral-950 text-light" id="root"></div>
     <script type="module" src="./main.tsx"></script>
   </body>
 </html>
